created service for API calls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<p>
+
   <mat-toolbar>
     <span>Crypto Tracker</span>
     <span class="example-spacer"></span>
@@ -11,4 +11,5 @@
       </mat-select>
     </mat-form-field>
   </mat-toolbar>
-</p>
+
+<router-outlet></router-outlet>
