--- a/src/app/components/coins-list/coins-list.component.html
+++ b/src/app/components/coins-list/coins-list.component.html
@@ -7,5 +7,7 @@
     </div>
 </div>
 <div class="container my-3">
-    table
+    <mat-form-field appearance="standard">
+        <mat-label>Coins</mat-label>
+    </mat-form-field>
 </div>
