--- a/src/app/components/coins-list/coins-list.component.html
+++ b/src/app/components/coins-list/coins-list.component.html
@@ -8,6 +8,47 @@
 </div>
 <div class="container my-3">
     <mat-form-field appearance="standard">
-        <mat-label>Coins</mat-label>
-    </mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+      </mat-form-field>
+      
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+      
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="symbol">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Coin </th>
+            <td mat-cell *matCellDef="let row"> {{row.symbol | uppercase}} </td>
+          </ng-container>
+      
+          <!-- Current Price Column -->
+          <ng-container matColumnDef="current_price">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+            <td mat-cell *matCellDef="let row"> {{row.current_price | currency: 'USD'}}</td>
+          </ng-container>
+      
+          <!-- Price change Column -->
+          <ng-container matColumnDef="price_change_percentage_24h">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> 24Hr Change </th>
+            <td mat-cell *matCellDef="let row"> {{row.price_change_percentage_24h}}% </td>
+          </ng-container>
+      
+          <!-- Market Cap Column -->
+          <ng-container matColumnDef="market_cap">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Market Cap </th>
+            <td mat-cell *matCellDef="let row"> {{row.market_cap | currency: 'USD'}} </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+          </tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+      </div>
+      
 </div>
