--- a/src/app/components/coins-list/coins-list.component.html
+++ b/src/app/components/coins-list/coins-list.component.html
@@ -9,7 +9,7 @@
 <div class="container my-3">
     <mat-form-field appearance="standard">
         <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+        <input class="text-white" matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
       </mat-form-field>
       
       <div class="mat-elevation-z8">
@@ -18,9 +18,18 @@
           <!-- Symbol Column -->
           <ng-container matColumnDef="symbol">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Coin </th>
-            <td mat-cell *matCellDef="let row"> {{row.symbol | uppercase}} </td>
+            <td mat-cell *matCellDef="let row">
+              <img [src]="row.image" width="50" class="my-1" alt="">
+              <span class="mx-2"> {{row.symbol | uppercase}} </span>
+            </td>
           </ng-container>
       
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let row"> {{row.name | uppercase}}</td>
+          </ng-container>
+
           <!-- Current Price Column -->
           <ng-container matColumnDef="current_price">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
@@ -48,7 +57,7 @@
           </tr>
         </table>
       
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50, 100]" aria-label="Select page of users"></mat-paginator>
       </div>
       
 </div>
