--- a/src/app/components/coins-list/coins-list.component.html
+++ b/src/app/components/coins-list/coins-list.component.html
@@ -1,11 +1,4 @@
-<div class="banner">
-    <div class="container">
-        <div class="header">
-            <h2>Crypto Prices</h2>
-            <h5>Check All Prices</h5>
-        </div>
-    </div>
-</div>
+
 <div class="container my-3">
     <mat-form-field appearance="standard">
         <mat-label>Filter</mat-label>
@@ -49,7 +42,7 @@
           </ng-container>
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr (click)="goToDetails(row)" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
