--- a/src/app/components/coin-details/coin-details.component.html
+++ b/src/app/components/coin-details/coin-details.component.html
@@ -1,1 +1,17 @@
-<p>coin-details works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3 details">
+            <div class="img">
+                <img [src]="coinData?.image?.large" alt="">
+                <h3 class="text-center" >{{ coinData?.name}}</h3>
+                <h2 [innerHtml]="coinData?.description?.en.split('. ')[0]"></h2>
+                <div class="more-detail">
+                    <span class="title">Rank: </span><span class="value">{{coinData?.market_cap_rank}}</span>
+                    <span class="title">Current Price: </span><span class="value">{{coinData?.market_cap_rank}}</span>
+                    <span class="title">Market Cap: </span><span class="value">{{coinData?.market_data.market_cap.usd | currency}}</span>
+                    <span class="title">Volume: </span><span class="value">{{coinData?.market_data.total_volume.usd | currency}}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
