--- a/src/app/components/coin-details/coin-details.component.html
+++ b/src/app/components/coin-details/coin-details.component.html
@@ -2,13 +2,13 @@
     <div class="row">
         <div class="col-md-3 details">
             <div class="img">
-                <img [src]="coinData?.image?.large" alt="">
-                <h3 class="text-center" >{{ coinData?.name}}</h3>
+                <img class="align-self-center" [src]="coinData?.image?.large" alt="">
+                <h3 class="text-left mt-4" >{{ coinData?.name}}</h3>
                 <h2 [innerHtml]="coinData?.description?.en.split('. ')[0]"></h2>
                 <div class="more-detail">
-                    <span class="title">Rank: </span><span class="value">{{coinData?.market_cap_rank}}</span>
-                    <span class="title">Current Price: </span><span class="value">{{coinData?.market_cap_rank}}</span>
-                    <span class="title">Market Cap: </span><span class="value">{{coinData?.market_data.market_cap.usd | currency}}</span>
+                    <span class="title">Rank: </span><span class="value">{{coinData?.market_cap_rank}}</span><br>
+                    <span class="title">Current Price: </span><span class="value">{{coinData?.market_data.current_price.usd | currency}}</span><br>
+                    <span class="title">Market Cap: </span><span class="value">{{coinData?.market_data.market_cap.usd | currency}}</span><br>
                     <span class="title">Volume: </span><span class="value">{{coinData?.market_data.total_volume.usd | currency}}</span>
                 </div>
             </div>
