--- a/src/app/components/coin-details/coin-details.component.html
+++ b/src/app/components/coin-details/coin-details.component.html
@@ -4,7 +4,7 @@
             <div class="img">
                 <img class="align-self-center" [src]="coinData?.image?.large" alt="">
                 <h3 class="text-left mt-4" >{{ coinData?.name}}</h3>
-                <h2 [innerHtml]="coinData?.description?.en.split('. ')[0]"></h2>
+                <h2 [innerHtml]="coinData?.description?.en.split('. ')[0]" class="fw-1"></h2>
                 <div class="more-detail">
                     <span class="title">Rank: </span><span class="value">{{coinData?.market_cap_rank}}</span><br>
                     <span class="title">Current Price: </span><span class="value">{{coinData?.market_data.current_price.usd | currency}}</span><br>
