--- a/src/app/components/coin-details/coin-details.component.html
+++ b/src/app/components/coin-details/coin-details.component.html
@@ -13,5 +13,10 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-8">
+            <canvas style="width: 300px" baseChart [data]="lineChartData" [options]="lineChartOptions" [type]="lineChartType">
+
+            </canvas>
+        </div>
     </div>
 </div>
