--- a/src/app/components/coins-list/coins-list.component.html
+++ b/src/app/components/coins-list/coins-list.component.html
@@ -26,19 +26,19 @@
           <!-- Current Price Column -->
           <ng-container matColumnDef="current_price">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-            <td mat-cell *matCellDef="let row"> {{row.current_price | currency: 'USD'}}</td>
+            <td mat-cell *matCellDef="let row"> {{row.current_price | currency: currency}}</td>
           </ng-container>
       
           <!-- Price change Column -->
           <ng-container matColumnDef="price_change_percentage_24h">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> 24Hr Change </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> 24hr Change </th>
             <td mat-cell *matCellDef="let row"> {{row.price_change_percentage_24h}}% </td>
           </ng-container>
       
           <!-- Market Cap Column -->
           <ng-container matColumnDef="market_cap">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Market Cap </th>
-            <td mat-cell *matCellDef="let row"> {{row.market_cap | currency: 'USD'}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.market_cap | currency: currency}} </td>
           </ng-container>
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
