--- a/src/app/components/coins-list/coins-list.component.html
+++ b/src/app/components/coins-list/coins-list.component.html
@@ -32,7 +32,7 @@
           <!-- Price change Column -->
           <ng-container matColumnDef="price_change_percentage_24h">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> 24hr Change </th>
-            <td mat-cell *matCellDef="let row"> {{row.price_change_percentage_24h}}% </td>
+            <td [ngClass]="row.price_change_percentage_24h > 0 ? 'text-success' : 'text-danger'" mat-cell *matCellDef="let row"> {{row.price_change_percentage_24h}}% </td>
           </ng-container>
       
           <!-- Market Cap Column -->
