added button to navigate out of details page

--- a/src/app/components/coin-details/coin-details.component.html
+++ b/src/app/components/coin-details/coin-details.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+    <button class="btn btn-warning" routerLink="coin-list"> <a href="">Back</a></button>
     <div class="row">
         <div class="col-md-3 details">
             <div class="img">
