--- a/src/app/components/coin-details/coin-details.component.html
+++ b/src/app/components/coin-details/coin-details.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
-    <button class="btn btn-warning" routerLink="coin-list"> <a href="">Back</a></button>
+    <button class="btn btn-warning m-2 mb-3" routerLink="coin-list"> <a href="">Back</a></button>
     <div class="row">
         <div class="col-md-3 details">
             <div class="img">
                 <img class="align-self-center" [src]="coinData?.image?.large" alt="">
                 <h3 class="text-left mt-4" >{{ coinData?.name}}</h3>
                 <h2 [innerHtml]="coinData?.description?.en.split('. ')[0]" class="fw-1"></h2>
-                <div class="more-detail">
+                <div class="more-detail mb-5">
                     <span class="title">Rank: </span><span class="value">{{coinData?.market_cap_rank}}</span><br>
                     <span class="title">Current Price: </span><span class="value">{{coinData?.market_data.current_price.usd | currency: currency}}</span><br>
                     <span class="title">Market Cap: </span><span class="value">{{coinData?.market_data.market_cap.usd | currency: currency}}</span><br>
