--- a/src/app/components/coin-details/coin-details.component.html
+++ b/src/app/components/coin-details/coin-details.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <button class="btn btn-warning m-2 mb-3" routerLink="coin-list"> <a href="">Back</a></button>
+    <button class="btn btn-warning m-2 mb-3 px-4" routerLink="coin-list"> <a href="">Back</a></button>
     <div class="row">
         <div class="col-md-3 details">
             <div class="img">
