--- a/src/app/components/coin-details/coin-details.component.scss
+++ b/src/app/components/coin-details/coin-details.component.scss
@@ -12,9 +12,17 @@ h3 {
 
 a {
     text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size:larger;
     
 }
 
 a:hover {
     color: white;
 } 
+
+img {
+    max-height: 15rem;
+}
+
